--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.0.5",
     "react-dom": "^16.5.2",
+    "react-router": "^4.3.1",
     "resolve": "1.8.1",
     "sass": "^1.14.2",
     "sass-loader": "7.1.0",
